--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,18 @@
 .chats_scroll{
     height: calc(100vh - 199px);
 }
-.chats_scroll::-webkit-scrollbar{
+.chats_scroll::-webkit-scrollbar,.new_chats_scroll::-webkit-scrollbar,.communities::-webkit-scrollbar{
     width: 4px;
     background: white;
 }
-.chats_scroll::-webkit-scrollbar-thumb{
+.chats_scroll::-webkit-scrollbar-thumb,.new_chats_scroll::-webkit-scrollbar-thumb,.communities::-webkit-scrollbar-thumb{
     background: #CED0D1;
 }
+.new_chats_scroll{
+    height: calc(100vh - 158px);
+}
+
+.communities{
+    height: calc(100vh - 95px);
+}
+
