--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,6 @@
     display: none;
 }
 
-
 .settings_scroll_container{
     height: calc(100vh - 108px);
 }
@@ -69,4 +68,8 @@
 }
 .settings_scroll_container::-webkit-scrollbar-thumb{
     background: #CED0D1;
+}
+
+.select_chats_scroll{
+    height: calc(100vh - 114px);
 }
